Adding id to btn-convert button

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <button
               class="btn btn-convert rounded-pill px-3 p-2 pl-4 pr-4"
               type="button"
+              id="btnConvert"
               onclick="convertTemp()"
             >
               convert
